--- a/squashfuse/x86_64/extra/PKGBUILD
+++ b/squashfuse/x86_64/extra/PKGBUILD
@@ -1,15 +1,21 @@
-# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 
 pkgname=squashfuse
-pkgver=0.1.104
-pkgrel=2
+pkgver=0.1.105
+pkgrel=1
 pkgdesc="FUSE filesystem to mount squashfs archives"
 arch=(x86_64)
 url="https://github.com/vasi/squashfuse"
 license=(custom)
 depends=(fuse zstd)
 makedepends=()
-source=($pkgname-$pkgver.tar.gz::https://github.com/vasi/squashfuse/releases/download/$pkgver/$pkgname-$pkgver.tar.gz)
+source=(https://github.com/vasi/squashfuse/archive/$pkgver/$pkgname-$pkgver.tar.gz)
+sha256sums=('3f776892ab2044ecca417be348e482fee2839db75e35d165b53737cb8153ab1e')
+
+prepare() {
+  cd $pkgname-$pkgver
+  ./autogen.sh
+}
 
 build() {
   cd $pkgname-$pkgver
@@ -27,4 +33,3 @@ package() {
 # install missing headers
   install -Dm644 *.h -t "$pkgdir"/usr/include/squashfuse
 }
-sha512sums=('ea3cd5d77d659bc54b63e3bf8084f29e8d8a5ec12dca5e9669e8537c44e53de6e332d52b307188dfb20b2b60a5fbe1e23c0d8813a9cc1d0283f665ec169ce854')
