--- a/xviewer/trunk/PKGBUILD
+++ b/xviewer/trunk/PKGBUILD
@@ -1,24 +1,25 @@
 # Maintainer: Chris Cromer <cromer@artixlinux.org>
 
 pkgname=xviewer
-pkgver=3.2.5
+pkgver=3.2.6
 pkgrel=1
 pkgdesc="A simple and easy to use image viewer. X-Apps Project."
 arch=('x86_64')
 license=('GPL')
 depends=('xapp' 'gtk3' 'cinnamon-desktop' 'libpeas' 'libexif' 'libjpeg-turbo'
          'exempi')
-makedepends=('meson' 'samurai' 'gnome-common' 'gobject-introspection' 'librsvg')
+makedepends=('meson' 'samurai' 'gobject-introspection' 'librsvg' 'itstool' 'gtk-doc')
 optdepends=('xviewer-plugins: Extra plugins'
             'librsvg: for scaling svg images')
 url='https://github.com/linuxmint/xviewer'
 
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
-md5sums=('6b286d57a5b00e0f14c287f6e14cc3fe')
+md5sums=('24603a5c4d990d25156bccec50d33089')
 
 build() {
   artix-meson ${pkgname}-${pkgver} build \
-    --libexecdir=lib/${pkgname}
+    --libexecdir=lib/${pkgname} \
+    --buildtype=plain
   samu -C build
 }
 
