--- a/dunst/trunk/PKGBUILD
+++ b/dunst/trunk/PKGBUILD
@@ -1,10 +1,10 @@
-# Maintainer: Johannes Löthberg <johannes@kyriasis.com>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Maintainer: Daniel M. Capella <polyzen@archlinux.org>
 # Contributor: Daniel Wallace <danielwallace at gtmanfred dot com>
 # Contributor: feuri
 
 pkgname=dunst
-pkgver=1.8.1
+pkgver=1.9.0
 pkgrel=1
 pkgdesc="Customizable and lightweight notification-daemon"
 url="https://dunst-project.org/"
@@ -17,7 +17,7 @@ backup=('etc/dunst/dunstrc')
 provides=('notification-daemon')
 options=('debug')
 source=("dunst-$pkgver.tar.gz::https://github.com/dunst-project/dunst/archive/v$pkgver.tar.gz")
-md5sums=('a3e484746f97f97866868d2755572784')
+md5sums=('adc41478b74f7f80cd9a569c9fc07e0c')
 
 build() {
   cd dunst-$pkgver
