--- a/orca/x86_64/extra/PKGBUILD
+++ b/orca/x86_64/extra/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=orca
-pkgver=42.1
+pkgver=42.2
 pkgrel=1
 pkgdesc="Screen reader for individuals who are blind or visually impaired"
 url="https://wiki.gnome.org/Projects/Orca"
@@ -17,7 +17,7 @@ depends=(
 )
 makedepends=(itstool git yelp-tools)
 groups=(gnome)
-_commit=5205af2626e75bfe3ab02e3e1696c4da36cfe59f  # tags/ORCA_42_1^0
+_commit=28e29e8ea870508078335ef439796190c3e02c9b  # tags/ORCA_42_2^0
 source=("git+https://gitlab.gnome.org/GNOME/orca.git#commit=$_commit")
 sha256sums=('SKIP')
 
