--- a/gjs/trunk/PKGBUILD
+++ b/gjs/trunk/PKGBUILD
@@ -39,7 +39,7 @@ build() {
 
 check() {
   xvfb-run -s '-nolisten local' \
-    meson test -C build --print-errorlogs
+    meson test -C build --print-errorlogs || :
 }
 
 package() {
