--- a/dolphin/trunk/PKGBUILD
+++ b/dolphin/trunk/PKGBUILD
@@ -1,11 +1,11 @@
-# Maintainer: Antonio Rojas <arojas@archlinux,org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=dolphin
-pkgver=22.04.2
-pkgrel=1.1
+pkgver=22.04.3
+pkgrel=1
 pkgdesc='KDE File Manager'
 arch=(x86_64)
 url='https://apps.kde.org/dolphin/'
@@ -16,7 +16,7 @@ optdepends=('kde-cli-tools: for editing file type options' 'ffmpegthumbs: video 
             'konsole: terminal panel' 'purpose: share context menu')
 groups=(kde-applications kde-system)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c2e3c4c16ff42a224f3dc72c79b2f641d1648d439bfa8c06635784843e58d147'
+sha256sums=('8e573e1df98b5b8f134374da641c1f289a00d1b6aabf65ecf3b2a6a854b22a1e'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
@@ -31,6 +31,5 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
-  rm -r $pkgdir/usr/lib/systemd
   rm -r $pkgdir/usr/lib/systemd
 }
