--- a/extra-cmake-modules/trunk/PKGBUILD
+++ b/extra-cmake-modules/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=extra-cmake-modules
 pkgver=5.96.0
-pkgrel=1
+pkgrel=1.1
 pkgdesc='Extra modules and scripts for CMake'
 arch=(any)
 url='https://community.kde.org/Frameworks'
@@ -15,10 +15,16 @@ optdepends=('python-pyxdg: to generate fastlane metadata for Android apps'
             'python-requests: to generate fastlane metadata for Android apps'
             'python-yaml: to generate fastlane metadata for Android apps')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        artix.patch)
 sha256sums=('bdb54407b2e2c9bc1e5b54825818d6807b5b5cc94b173dd272ef1354dc96fdd9'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+
+prepare() {
+  # Artix stuff - don't delete it!
+  patch -d $pkgname-$pkgver -Np1 -i ../artix.patch
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
