--- a/extra-cmake-modules/trunk/PKGBUILD
+++ b/extra-cmake-modules/trunk/PKGBUILD
@@ -18,7 +18,8 @@ groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
         artix.patch)
 sha256sums=('bdb54407b2e2c9bc1e5b54825818d6807b5b5cc94b173dd272ef1354dc96fdd9'
-            'SKIP')
+            'SKIP'
+            'acc329fbcabc1e1495f96b666ab76b1f252f15b57bc94878c24a5362aa04d796')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
 prepare() {
