--- a/extra-cmake-modules/x86_64/extra/PKGBUILD
+++ b/extra-cmake-modules/x86_64/extra/PKGBUILD
@@ -1,10 +1,10 @@
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=extra-cmake-modules
-pkgver=5.95.0
-pkgrel=1
+pkgver=5.96.0
+pkgrel=1.1
 pkgdesc='Extra modules and scripts for CMake'
 arch=(any)
 url='https://community.kde.org/Frameworks'
@@ -17,10 +17,15 @@ optdepends=('python-pyxdg: to generate fastlane metadata for Android apps'
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
         artix.patch)
-sha256sums=('ffa02309d92958353e8e7837970e0d038475da5a18074e3442bf6b78ac91ad5a'
+sha256sums=('bdb54407b2e2c9bc1e5b54825818d6807b5b5cc94b173dd272ef1354dc96fdd9'
             'SKIP'
             'acc329fbcabc1e1495f96b666ab76b1f252f15b57bc94878c24a5362aa04d796')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+
+prepare() {
+  # Artix stuff - don't delete it!
+  patch -d $pkgname-$pkgver -Np1 -i ../artix.patch
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
@@ -28,11 +33,6 @@ build() {
     -DBUILD_HTML_DOCS=ON \
     -DBUILD_QTHELP_DOCS=ON
   cmake --build build
-}
-
-prepare() {
-  # Artix stuff - don't delete it!
-  patch -d $pkgname-$pkgver -Np1 -i ../artix.patch
 }
 
 package() {
