--- a/prison/x86_64/extra/PKGBUILD
+++ b/prison/x86_64/extra/PKGBUILD
@@ -1,20 +1,21 @@
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: artist <artist@artixlinux.org>
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=prison
-pkgver=5.95.0
-pkgrel=1
+pkgver=5.96.0
+pkgrel=1.1
 pkgdesc='A barcode API to produce QRCode barcodes and DataMatrix barcodes'
 arch=(x86_64)
 url='https://community.kde.org/Frameworks'
 license=(GPL)
 depends=(qt5-multimedia libdmtx qrencode zxing-cpp)
-makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
+#makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
+makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative 'zxing-cpp=1.3.0')
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('616dbe05603a56225462c75537cddefde0f0fe7343e54b2a40ad571cda676f44'
+sha256sums=('ba2785b054e36950a4561786bcff9fdb80bcc5a0122d1cee403326e95746f4cf'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
